--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #F5F5F5; /* 🎨 Fondo neutro */
+            background-color: #F5F5F5;
         }
 
         h1 {
@@ -35,7 +35,7 @@
             display: flex;
             gap: 10px;
             align-items: center;
-            background: #A67C52; /* 🎨 Color cálido */
+            background: #A67C52;
             padding: 10px;
             border-radius: 8px;
             color: white;
@@ -75,41 +75,38 @@
             border-radius: 10px;
         }
 
-        /* 🔥 Leyenda ajustada */
+        /* 📌 Ajustes en la leyenda */
         #legend {
             position: absolute;
-            top: 20px;
+            top: 60px;
             right: 10px;
-            width: 320px; /* 📌 Aumentamos el ancho para evitar que el texto se corte */
+            width: 320px; /* 📏 Más ancho para evitar cortes */
             background: white;
-            padding: 10px;
+            padding: 12px;
             border-radius: 8px;
             box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
             font-size: 14px;
             overflow-y: auto;
-            max-height: 400px;
+            max-height: 450px;
             text-align: left;
-            z-index: 1000; /* 🔥 Asegura que la leyenda esté visible */
+            z-index: 1000;
         }
 
         .legend-item {
             display: flex;
-            align-items: center;
-            margin-bottom: 5px;
-            font-size: 14px;
-            width: 100%;
+            align-items: flex-start;
+            margin-bottom: 8px;
+            line-height: 1.3;
         }
 
         .legend-item i {
-            width: 20px;
-            text-align: center;
+            font-size: 16px;
+            margin-right: 8px;
+            flex-shrink: 0;
         }
 
-        .legend-item b {
-            margin-left: 5px;
-            font-size: 14px;
-            min-width: 110px; /* 📌 Hace que las siglas tengan un espacio definido */
-            display: inline-block;
+        .legend-text {
+            flex-grow: 1;
         }
     </style>
 </head>
@@ -134,27 +131,18 @@
         <div id="map"></div>  
         <div id="legend">
             <h3>Leyenda</h3>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A93226;"></i> <b>CDM:</b> Centro para el Desarrollo de las Mujeres</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #76448A;"></i> <b>ULA/FIJA:</b> Unidad Local de Atención Fija</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E74C3C;"></i> <b>CJM:</b> Centro de Justicia para las Mujeres</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #B9770E;"></i> <b>CEB:</b> Centro de Empoderamiento y Bienestar</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #239B56;"></i> <b>Municipal:</b> Atención Municipal</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D68910;"></i> <b>ULA/Itinerante:</b> Unidad Local de Atención Itinerante</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #5D6D7E;"></i> <b>ULA/TEL:</b> Línea de Atención Telefónica</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E67E22;"></i> <b>ULA/EMERGENCIA:</b> Unidad de Atención de Emergencia</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #9B59B6;"></i> <b>Punto Violeta:</b> Espacios Seguros para Mujeres</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #C39BD3;"></i> <b>Puerta Violeta:</b> Programa de Seguridad para Mujeres</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A04000;"></i> <b>CEAV:</b> Comisión Ejecutiva de Atención a Víctimas</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1F618D;"></i> <b>IMMT:</b> Instituto Municipal de la Mujer</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #145A32;"></i> <b>MAI:</b> Módulo de Atención Integral</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D35400;"></i> <b>IMM:</b> Instituto de la Mujer Municipal</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #7B7D7D;"></i> <b>CAVIZ:</b> Centro de Atención a la Violencia</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #4D5656;"></i> <b>DIG:</b> Dirección de Igualdad de Género</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #FF5733;"></i> <b>COBUPEJ:</b> Comisión de Búsqueda de Personas</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #AF7AC5;"></i> <b>CDM/ITINERANTE:</b> Centro para el Desarrollo de las Mujeres Itinerante</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1ABC9C;"></i> <b>CEA:</b> Centro Externo de Atención</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #2980B9;"></i> <b>ESTATAL:</b> Atención Estatal</div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #8E44AD;"></i> <b>IMEF:</b> Instituto de las Mujeres en la Economía y Finanzas</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A93226;"></i> <span class="legend-text"><b>CDM:</b> Centro para el Desarrollo de las Mujeres</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #76448A;"></i> <span class="legend-text"><b>ULA/FIJA:</b> Unidad Local de Atención Fija</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E74C3C;"></i> <span class="legend-text"><b>CJM:</b> Centro de Justicia para las Mujeres</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #B9770E;"></i> <span class="legend-text"><b>CEB:</b> Centro de Empoderamiento y Bienestar</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #239B56;"></i> <span class="legend-text"><b>Municipal:</b> Atención Municipal</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D68910;"></i> <span class="legend-text"><b>ULA/Itinerante:</b> Unidad Local de Atención Itinerante</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #5D6D7E;"></i> <span class="legend-text"><b>ULA/TEL:</b> Línea de Atención Telefónica</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E67E22;"></i> <span class="legend-text"><b>ULA/EMERGENCIA:</b> Unidad de Atención de Emergencia</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #9B59B6;"></i> <span class="legend-text"><b>Punto Violeta:</b> Espacios Seguros para Mujeres</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #C39BD3;"></i> <span class="legend-text"><b>Puerta Violeta:</b> Programa de Seguridad para Mujeres</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A04000;"></i> <span class="legend-text"><b>CEAV:</b> Comisión Ejecutiva de Atención a Víctimas</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #8E44AD;"></i> <span class="legend-text"><b>IMEF:</b> Instituto de las Mujeres en la Economía y Finanzas</span></div>
         </div>
     </div>
 
