--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             position: absolute;
             top: 60px;
             right: 10px;
-            width: 320px; /* 📏 Más ancho para evitar cortes */
+            width: 340px; /* 📏 Más ancho para evitar cortes */
             background: white;
             padding: 12px;
             border-radius: 8px;
@@ -143,6 +143,10 @@
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #C39BD3;"></i> <span class="legend-text"><b>Puerta Violeta:</b> Programa de Seguridad para Mujeres</span></div>
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A04000;"></i> <span class="legend-text"><b>CEAV:</b> Comisión Ejecutiva de Atención a Víctimas</span></div>
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #8E44AD;"></i> <span class="legend-text"><b>IMEF:</b> Instituto de las Mujeres en la Economía y Finanzas</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #FF5733;"></i> <span class="legend-text"><b>COBUPEJ:</b> Comisión de Búsqueda de Personas</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #AF7AC5;"></i> <span class="legend-text"><b>CDM/ITINERANTE:</b> Centro para el Desarrollo de las Mujeres Itinerante</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1ABC9C;"></i> <span class="legend-text"><b>CEA:</b> Centro Externo de Atención</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #2980B9;"></i> <span class="legend-text"><b>ESTATAL:</b> Atención Estatal</span></div>
         </div>
     </div>
 
