--- a/index.html
+++ b/index.html
@@ -131,22 +131,22 @@
         <div id="map"></div>  
         <div id="legend">
             <h3>Leyenda</h3>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1ABC9C;"></i> <span class="legend-text"><b>CEA:</b> Centro Externo de Atención</span></div>
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A93226;"></i> <span class="legend-text"><b>CDM:</b> Centro para el Desarrollo de las Mujeres</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #76448A;"></i> <span class="legend-text"><b>ULA/FIJA:</b> Unidad Local de Atención Fija</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E74C3C;"></i> <span class="legend-text"><b>CJM:</b> Centro de Justicia para las Mujeres</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #AF7AC5;"></i> <span class="legend-text"><b>CDM/ITINERANTE:</b> Centro para el Desarrollo de las Mujeres Itinerante</span></div>
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #B9770E;"></i> <span class="legend-text"><b>CEB:</b> Centro de Empoderamiento y Bienestar</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #239B56;"></i> <span class="legend-text"><b>Municipal:</b> Atención Municipal</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A04000;"></i> <span class="legend-text"><b>CEAV:</b> Comisión Ejecutiva de Atención a Víctimas</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #FF5733;"></i> <span class="legend-text"><b>COBUPEJ:</b> Comisión de Búsqueda de Personas</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E74C3C;"></i> <span class="legend-text"><b>CJM:</b> Centro de Justicia para las Mujeres</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #8E44AD;"></i> <span class="legend-text"><b>IMEF:</b> Instituto de las Mujeres en la Economía y Finanzas</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1F618D;"></i> <span class="legend-text"><b>IMMT:</b> Instituto Municipal de la Mujer</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #2980B9;"></i> <span class="legend-text"><b>ESTATAL:</b> Atención Estatal</span></div>
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D68910;"></i> <span class="legend-text"><b>ULA/Itinerante:</b> Unidad Local de Atención Itinerante</span></div>
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #5D6D7E;"></i> <span class="legend-text"><b>ULA/TEL:</b> Línea de Atención Telefónica</span></div>
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E67E22;"></i> <span class="legend-text"><b>ULA/EMERGENCIA:</b> Unidad de Atención de Emergencia</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #239B56;"></i> <span class="legend-text"><b>Municipal:</b> Atención Municipal</span></div>
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #9B59B6;"></i> <span class="legend-text"><b>Punto Violeta:</b> Espacios Seguros para Mujeres</span></div>
             <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #C39BD3;"></i> <span class="legend-text"><b>Puerta Violeta:</b> Programa de Seguridad para Mujeres</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A04000;"></i> <span class="legend-text"><b>CEAV:</b> Comisión Ejecutiva de Atención a Víctimas</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #8E44AD;"></i> <span class="legend-text"><b>IMEF:</b> Instituto de las Mujeres en la Economía y Finanzas</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #FF5733;"></i> <span class="legend-text"><b>COBUPEJ:</b> Comisión de Búsqueda de Personas</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #AF7AC5;"></i> <span class="legend-text"><b>CDM/ITINERANTE:</b> Centro para el Desarrollo de las Mujeres Itinerante</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1ABC9C;"></i> <span class="legend-text"><b>CEA:</b> Centro Externo de Atención</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #2980B9;"></i> <span class="legend-text"><b>ESTATAL:</b> Atención Estatal</span></div>
         </div>
     </div>
 
