--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mapa de Centros de Atención</title>
+    <title>📍 Mapa de Centros de Atención</title>
 
     <!-- Estilos -->
     <link rel="stylesheet" href="style.css">
@@ -22,13 +22,18 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #F5F5F5;
+            background-color: #F5F5F5; 
         }
 
         h1 {
-            font-size: 24px;
-            margin-bottom: 10px;
-            color: #333;
+            font-size: 28px;
+            font-weight: bold;
+            color: #5D4037; 
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            justify-content: center;
         }
 
         .filters {
@@ -75,43 +80,37 @@
             border-radius: 10px;
         }
 
-        /* 📌 Ajustes en la leyenda */
         #legend {
             position: absolute;
-            top: 60px;
+            top: 60px; 
             right: 10px;
-            width: 340px; /* 📏 Más ancho para evitar cortes */
+            width: 300px; /* Más ancho */
             background: white;
-            padding: 12px;
+            padding: 10px;
             border-radius: 8px;
             box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
             font-size: 14px;
             overflow-y: auto;
-            max-height: 450px;
+            max-height: 400px;
             text-align: left;
             z-index: 1000;
         }
 
         .legend-item {
             display: flex;
-            align-items: flex-start;
-            margin-bottom: 8px;
-            line-height: 1.3;
+            align-items: center;
+            margin-bottom: 5px;
+            font-size: 14px;
         }
 
-        .legend-item i {
-            font-size: 16px;
-            margin-right: 8px;
-            flex-shrink: 0;
-        }
-
-        .legend-text {
-            flex-grow: 1;
+        .legend-item b {
+            font-size: 14px;
+            margin-right: 5px;
         }
     </style>
 </head>
 <body>
-    <h1>Mapa de Centros de Atención</h1>
+    <h1><i class="fas fa-map-marker-alt"></i> Mapa de Centros de Atención</h1>
 
     <div class="filters">
         <label for="filtroEstado">Filtrar por Estado:</label>
@@ -131,22 +130,26 @@
         <div id="map"></div>  
         <div id="legend">
             <h3>Leyenda</h3>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1ABC9C;"></i> <span class="legend-text"><b>CEA:</b> Centro Externo de Atención</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A93226;"></i> <span class="legend-text"><b>CDM:</b> Centro para el Desarrollo de las Mujeres</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #AF7AC5;"></i> <span class="legend-text"><b>CDM/ITINERANTE:</b> Centro para el Desarrollo de las Mujeres Itinerante</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #B9770E;"></i> <span class="legend-text"><b>CEB:</b> Centro de Empoderamiento y Bienestar</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A04000;"></i> <span class="legend-text"><b>CEAV:</b> Comisión Ejecutiva de Atención a Víctimas</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #FF5733;"></i> <span class="legend-text"><b>COBUPEJ:</b> Comisión de Búsqueda de Personas</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E74C3C;"></i> <span class="legend-text"><b>CJM:</b> Centro de Justicia para las Mujeres</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #8E44AD;"></i> <span class="legend-text"><b>IMEF:</b> Instituto de las Mujeres en la Economía y Finanzas</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1F618D;"></i> <span class="legend-text"><b>IMMT:</b> Instituto Municipal de la Mujer</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #2980B9;"></i> <span class="legend-text"><b>ESTATAL:</b> Atención Estatal</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D68910;"></i> <span class="legend-text"><b>ULA/Itinerante:</b> Unidad Local de Atención Itinerante</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #5D6D7E;"></i> <span class="legend-text"><b>ULA/TEL:</b> Línea de Atención Telefónica</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E67E22;"></i> <span class="legend-text"><b>ULA/EMERGENCIA:</b> Unidad de Atención de Emergencia</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #239B56;"></i> <span class="legend-text"><b>Municipal:</b> Atención Municipal</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #9B59B6;"></i> <span class="legend-text"><b>Punto Violeta:</b> Espacios Seguros para Mujeres</span></div>
-            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #C39BD3;"></i> <span class="legend-text"><b>Puerta Violeta:</b> Programa de Seguridad para Mujeres</span></div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #FF5733;"></i> <b>CEA:</b> Centro Externo de Atención</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A93226;"></i> <b>CDM:</b> Centro para el Desarrollo de las Mujeres</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #AF7AC5;"></i> <b>CDM/ITINERANTE:</b> Centro para el Desarrollo de las Mujeres Itinerante</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #B9770E;"></i> <b>CEB:</b> Centro de Empoderamiento y Bienestar</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #A04000;"></i> <b>CEAV:</b> Comisión Ejecutiva de Atención a Víctimas</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #FF5733;"></i> <b>COBUPEJ:</b> Comisión de Búsqueda de Personas</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E74C3C;"></i> <b>CJM:</b> Centro de Justicia para las Mujeres</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #7B7D7D;"></i> <b>CAVIZ:</b> Centro de Atención a la Violencia</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #4D5656;"></i> <b>DIG:</b> Dirección de Igualdad de Género</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #2980B9;"></i> <b>ESTATAL:</b> Atención Estatal</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #8E44AD;"></i> <b>IMEF:</b> Instituto de las Mujeres en la Economía y Finanzas</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #1F618D;"></i> <b>IMMT:</b> Instituto Municipal de la Mujer</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D35400;"></i> <b>IMM:</b> Instituto de la Mujer Municipal</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #145A32;"></i> <b>MAI:</b> Módulo de Atención Integral</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #239B56;"></i> <b>Municipal:</b> Atención Municipal</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #9B59B6;"></i> <b>Punto Violeta:</b> Espacios Seguros para Mujeres</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #C39BD3;"></i> <b>Puerta Violeta:</b> Programa de Seguridad para Mujeres</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #D68910;"></i> <b>ULA/Itinerante:</b> Unidad Local de Atención Itinerante</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #5D6D7E;"></i> <b>ULA/TEL:</b> Línea de Atención Telefónica</div>
+            <div class="legend-item"><i class="fas fa-map-marker-alt" style="color: #E67E22;"></i> <b>ULA/EMERGENCIA:</b> Unidad de Atención de Emergencia</div>
         </div>
     </div>
 
