--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
         #legend {
             position: absolute;
-            top: 60px;
+            top: 100px; /* 🔽 Ajustado para que no cubra los mapas base */
             right: 10px;
-            width: 320px; /* Aumentamos el ancho */
+            width: 350px; /* 📏 Aumento del ancho para mejor alineación */
             background: white;
             padding: 10px;
             border-radius: 8px;
@@ -95,11 +95,12 @@
             display: flex;
             align-items: center;
             margin-bottom: 5px;
-            font-size: 13px;
+            font-size: 14px;
         }
 
         .legend-item b {
             font-size: 14px;
+            margin-right: 5px;
         }
 
         .legend-icon {
