--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             display: flex;
             gap: 10px;
             align-items: center;
-            background: #F8BBD0; /* 🎨 Color rosa pastel */
+            background: #F4C2C2; 
             padding: 10px;
             border-radius: 8px;
             color: white;
