--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <!-- Estilos -->
     <link rel="stylesheet" href="style.css">
     
-    <!-- Leaflet para el mapa -->
+    <!-- mapa -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 
-    <!-- FontAwesome para los íconos -->
+    <!--íconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
-    <!-- Fuente Poppins -->
+    <!-- Poppins -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     
     <style>
