--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <!-- Estilos -->
     <link rel="stylesheet" href="style.css">
     
-    <!-- mapa -->
+    <!-- Leaflet para el mapa -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 
-    <!--íconos -->
+    <!-- FontAwesome para los íconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
-    <!-- Poppins -->
+    <!-- Fuente Poppins -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     
     <style>
@@ -46,7 +46,7 @@
             display: flex;
             gap: 10px;
             align-items: center;
-            background: #F4C2C2; 
+            background: #F8BBD0; /* 🎨 Color rosa pastel */
             padding: 10px;
             border-radius: 8px;
             color: white;
