--- a/index.html
+++ b/index.html
@@ -19,105 +19,148 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     
     <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-color: #F5F5F5;
-        }
+    body {
+        font-family: 'Poppins', sans-serif;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #F5F5F5;
+        margin: 0;
+        padding: 0;
+    }
 
+    .custom-title {
+        font-size: 24px;
+        margin: 10px;
+        color: #2C3E50;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        font-weight: bold;
+        text-align: center;
+        flex-wrap: wrap;
+    }
+
+    .custom-title i {
+        color: #D81B60;
+    }
+
+    .filters {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 10px;
+        align-items: center;
+        background: #F8BBD0;
+        padding: 10px;
+        border-radius: 8px;
+        color: white;
+        width: 90%;
+        max-width: 600px;
+        margin-bottom: 10px;
+    }
+
+    .filters label {
+        font-weight: bold;
+        color: #880E4F;
+    }
+
+    select, button {
+        padding: 8px;
+        border-radius: 5px;
+        border: none;
+        font-size: 14px;
+        width: 100%;
+        max-width: 200px;
+    }
+
+    button {
+        background-color: #D81B60;
+        color: white;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background-color: #AD1457;
+    }
+
+    #container {
+        position: relative;
+        width: 100%;
+        max-width: 1000px;
+        height: 500px;
+    }
+
+    #map {
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+    }
+
+    #legend {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 90%;
+        max-width: 380px;
+        background: white;
+        padding: 10px;
+        border-radius: 8px;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+        font-size: 14px;
+        overflow-x: auto;
+        overflow-y: auto;
+        max-height: 400px;
+        text-align: left;
+        z-index: 1000;
+        white-space: nowrap;
+    }
+
+    .legend-item {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 8px;
+        margin-bottom: 5px;
+        font-size: 14px;
+    }
+
+    .legend-item i {
+        flex-shrink: 0;
+    }
+
+    @media (max-width: 768px) {
         .custom-title {
-            font-size: 30px;
-            margin-bottom: 10px;
-            color: #2C3E50;
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            font-weight: bold;
-        }
-
-        .custom-title i {
-            color: #D81B60; /* Color rosa para resaltar el ícono */
+            font-size: 20px;
+            flex-direction: column;
+            text-align: center;
         }
 
         .filters {
-            display: flex;
-            gap: 10px;
+            flex-direction: column;
             align-items: center;
-            background: #F8BBD0; /* 🎨 Color rosa pastel */
-            padding: 10px;
-            border-radius: 8px;
-            color: white;
-            margin-bottom: 10px;
-        }
-
-        .filters label {
-            font-weight: bold;
-            color: #880E4F;
+            width: 100%;
         }
 
         select, button {
-            padding: 8px;
-            border-radius: 5px;
-            border: none;
-            font-size: 14px;
-        }
-
-        button {
-            background-color: #D81B60;
-            color: white;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #AD1457;
+            width: 90%;
+            max-width: none;
         }
 
         #container {
-            position: relative;
-            width: 90%;
-            height: 600px;
-        }
-
-        #map {
-            width: 100%;
-            height: 100%;
-            border-radius: 10px;
+            height: 400px;
         }
 
         #legend {
-            position: absolute;
-            top: 90px;
-            right: 10px;
-            width: 380px;
-            background: white;
-            padding: 10px;
-            border-radius: 8px;
-            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
-            font-size: 14px;
-            overflow-x: auto;
-            overflow-y: auto;
-            max-height: 400px;
-            text-align: left;
-            z-index: 1000;
-            white-space: nowrap;
+            width: 95%;
+            max-width: 95%;
+            font-size: 12px;
         }
+    }
+</style>
 
-        .legend-item {
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            gap: 8px;
-            margin-bottom: 5px;
-            font-size: 14px;
-        }
-
-        .legend-item i {
-            flex-shrink: 0;
-        }
-    </style>
 </head>
 <body>
     <h1 class="custom-title">
