--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
     }
 
     /* 📌 Estilos para la leyenda */
+    <button id="toggleLegend">Mostrar Leyenda</button>
+
     #legend {
         position: absolute;
         top: 60px;
